# UniRender

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pragma-linux-ci.yml
include/: util_pragma_doc.hpp  util_raytracing.hpp
include/util_raytracing/: baking.hpp  camera.hpp  ccl_shader.hpp  color_management.hpp  data_value.hpp  definitions.hpp  denoise.hpp  exception.hpp  hair.hpp  light.hpp  mesh.hpp  model_cache.hpp  object.hpp  renderer.hpp  scene.hpp  scene_object.hpp  shader.hpp  shader_nodes.hpp  subdivision.hpp  tilemanager.hpp  world_object.hpp
src/: baking.cpp  camera.cpp  ccl_shader.cpp  color_management.cpp  data_value.cpp  denoise.cpp  hair.cpp  light.cpp  main.cpp  mesh.cpp  mikk_tangent_space.cpp  model_cache.cpp  object.cpp  renderer.cpp  scene.cpp  scene_object.cpp  shader.cpp  shader_nodes.cpp  subdivision.cpp  tilemanager.cpp  util_pragam_doc_parameter.cpp  util_pragma_doc.cpp  util_pragma_doc_base_collection.cpp  util_pragma_doc_collection.cpp  util_pragma_doc_derived_from.cpp  util_pragma_doc_enum.cpp  util_pragma_doc_enum_set.cpp  util_pragma_doc_function.cpp  util_pragma_doc_group.cpp  util_pragma_doc_impl.cpp  util_pragma_doc_impl.hpp  util_pragma_doc_member.cpp  util_pragma_doc_module.cpp  util_pragma_doc_overload.cpp  util_pragma_doc_udm.cpp  util_pragma_doc_zerobrane.cpp  util_raytracing.cppm  world_object.cpp
src/cycles/: cycles_renderer.cpp
src/implementation/: camera.cpp  color_management.cpp  data_value.cpp  denoise.cpp  light.cpp  mesh.cpp  model_cache.cpp  object.cpp  renderer.cpp  scene.cpp  scene_object.cpp  shader.cpp  (+4 more)
(+22 files in other folders)
